@@ -16,6 +16,7 @@ v4.5.2 (Unreleased)
 - Fix: Input fields border focus did not consistently inherit the correct styling in certain scenarios.
 - Fix: WooCommerce - PHP fatal error 'Uncaught Error: Call to a member function get_cart_contents_total() on null' when cart element is added in the header and "Hide Cart Total Label" option is enabled.
 - Fix: PHP deprecated notices with PHP 8.0 and above when activating the theme.
+- Fix: WooCommerce - Mini cart values does not update automatically in the cart page.
 
 v4.5.1
 - Improvement: Compatibility with WooCommerce 8.3.
